Overgang til Sjablong og fått inn brreg
