# routes/v1/beforeRouteMiddleware.js
@@ -2,14 +2,14 @@
 // Import dependencies
 /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 const TemplateClient = require('../../lib/TemplateClient/TemplateClient');
+const Sjablong = require('sjablong');
 
 /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 // Middleware function
 /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 async function f (req, res, next) {
   let matrikkelContext = TemplateClient.getTemplate('matrikkelContext.xml');
-  matrikkelContext = TemplateClient.replacePlaceholder(matrikkelContext, req.body.matrikkelContext);
-  matrikkelContext = TemplateClient.fillDefaultValues(matrikkelContext);
+  matrikkelContext = Sjablong.replacePlaceholders(matrikkelContext, req.body.matrikkelContext);
   req.matrikkelContext = matrikkelContext;
 
   next();
